--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -79,11 +79,9 @@
                     <ToggleButton
                         
                         android:id="@+id/condition_inout_image"
-				        android:layout_width="40dip"
-				        android:layout_height="40dip"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
 				        android:background="@drawable/condition_inout_toggle"
-				        android:textOn="IN"
-				        android:textOff="OUT"
 						android:layout_centerInParent="true"/>
                     
                     <TextView
