--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -22,7 +22,7 @@
 		     android:layout_width="match_parent"
 		     android:layout_height="0dip"
 		     android:layout_weight="4"
-		     android:background="#6AC2C7"
+		     android:background="#606AC2C7"
 		     android:orientation="horizontal">
 		     
 		     <TextView
