main Recommend list ListView 변경

--- a/Kiznic/res/layout/list_item_card.xml
+++ b/Kiznic/res/layout/list_item_card.xml
@@ -34,384 +34,17 @@
 	        
 	    </LinearLayout>
 	    
-	    <!-- recommend card 1 -->
-	    
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="0dip"
-	        android:layout_weight="4"
-	        android:background="@drawable/main_card_background"
-	        android:orientation="horizontal">
-	        
-	        <!-- recommend item poster -->
-	        
-	        <LinearLayout
-	            android:layout_width="0dip"
-	            android:layout_height="match_parent"
-	            android:layout_weight="4"
-	            android:orientation="vertical">
-	            
-	            <ImageView
-	                android:id="@+id/recommend_posterimage_image"
-	                android:layout_width="match_parent"
-	                android:layout_height="match_parent"
-	                android:padding="3dip"
-	                android:layout_gravity="center"
-	                android:src="@drawable/recommend"/>
-	            
-	        </LinearLayout>
-	        
-	        <LinearLayout
-	            android:layout_width="0dip"
-	            android:layout_height="match_parent"
-	            android:layout_weight="7"
-	            android:orientation="vertical">
-	            
-	            <LinearLayout
-	                android:layout_width="match_parent"
-	                android:layout_height="0dip"
-	                android:layout_weight="1"
-	                android:orientation="vertical">
-	                
-	                <!-- recommend title -->
-	                
-	                <TextView
-	                    android:id="@+id/recommend_itemtitle_text"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:text="배고픈 애벌레"
-	                    android:textColor="#000000"
-	                    android:textSize="13sp"/>
-	                
-	                <TextView
-	                    android:id="@+id/recommend_itemage_text"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginTop="3dip"
-	                    android:text="만 36개월 이상"
-	                    android:textColor="#000000"
-	                    android:textSize="10sp"/>
-	                
-	            </LinearLayout>
-	            
-	            <LinearLayout
-	                android:layout_width="match_parent"
-	                android:layout_height="0dip"
-	                android:layout_weight="2"
-	                android:orientation="vertical">
-	                
-	                <LinearLayout
-	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
-	                    android:orientation="horizontal">
-	                    
-	                    <TextView
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_gravity="center"
-	                        android:text="기간"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                      
-		                <TextView
-		                    android:id="@+id/recommend_period_text"
-		                    android:layout_width="wrap_content"
-		                    android:layout_height="wrap_content"
-		                    android:layout_marginLeft="5dip"
-	                        android:layout_gravity="center"
-		                    android:text="14. 04. 22 ~ 14. 04. 27"
-		                    android:textColor="#000000"
-		                    android:textSize="12sp"/>
-	                    
-	                </LinearLayout>
-	                
-	                <LinearLayout
-	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
-	                    android:orientation="horizontal">
-	                    
-	                    <TextView
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_gravity="center"
-	                        android:text="장소"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                        
-	                    <TextView
-	                        android:id="@+id/recommend_place_text"
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_marginLeft="5dip"
-	                        android:layout_gravity="center"
-	                        android:text="오페라 하우스"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                    
-	                </LinearLayout>
-	                
-	                <LinearLayout
-	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
-	                    android:orientation="horizontal">
-	                    
-	                    <TextView
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_gravity="center"
-	                        android:text="거리"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                      
-		                <TextView
-		                    android:id="@+id/recommend_distance_text"
-		                    android:layout_width="wrap_content"
-		                    android:layout_height="wrap_content"
-		                    android:layout_marginLeft="5dip"
-	                        android:layout_gravity="center"
-		                    android:text="5km"
-		                    android:textColor="#000000"
-		                    android:textSize="12sp"/>
-	                    
-	                </LinearLayout>
-	                
-	            </LinearLayout>
-	            
-	        </LinearLayout>
-	        
-	         <LinearLayout
-	            android:layout_width="0dip"
-	            android:layout_height="match_parent"
-	            android:layout_weight="3"
-	            android:gravity="center"
-	            android:orientation="vertical">
-	            
-	             <RelativeLayout
-	                 android:layout_width="match_parent"
-	                 android:layout_height="0dip"
-	                 android:layout_weight="75">
-	                 
-	                 <ImageView
-		             android:id="@+id/recommend_weatherimage_image"
-		             android:layout_width="50dip"
-		             android:layout_height="50dip"
-		             android:layout_centerInParent="true"
-		             android:paddingTop="3dip"
-		             android:src="@drawable/weather_image"/>
-	                 
-	             </RelativeLayout>
-	             
-	             <RelativeLayout
-	                 android:layout_width="match_parent"
-	                 android:layout_height="0dip"
-	                 android:layout_weight="50">
-	                 
-	                 <TextView
-			             android:id="@+id/recommend_weathertemperature_text"
-			             android:layout_width="wrap_content"
-			             android:layout_height="wrap_content"
-			             android:layout_centerInParent="true"
-			             android:text="18.3°"
-			             android:textColor="#000000"
-			             android:textSize="20sp"/>
-	                 
-	             </RelativeLayout>
-	                 
-	         </LinearLayout>
-	        
-	    </LinearLayout>
-	    
-	    <!-- recommend card 2 -->
-	    
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="0dip"
-	        android:layout_weight="4"
-	        android:background="@drawable/main_card_background"
-	        android:orientation="horizontal">
-	        
-	        <!-- recommend item poster -->
-	        
-	        <LinearLayout
-	            android:layout_width="0dip"
-	            android:layout_height="match_parent"
-	            android:layout_weight="4"
-	            android:orientation="vertical">
-	            
-	            <ImageView
-	                android:id="@+id/recommend_posterimage_image2"
-	                android:layout_width="match_parent"
-	                android:layout_height="match_parent"
-	                android:padding="3dip"
-	                android:src="@drawable/recommend"/>
-	            
-	        </LinearLayout>
-	        
-	        <LinearLayout
-	            android:layout_width="0dip"
-	            android:layout_height="match_parent"
-	            android:layout_weight="7"
-	            android:orientation="vertical">
-	            
-	            <LinearLayout
-	                android:layout_width="match_parent"
-	                android:layout_height="0dip"
-	                android:layout_weight="1"
-	                android:orientation="vertical">
-	                
-	                <!-- recommend title -->
-	                
-	                <TextView
-	                    android:id="@+id/recommend_itemtitle_text2"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:text="배고픈 애벌레"
-	                    android:textColor="#000000"
-	                    android:textSize="13sp"/>
-	                
-	                <TextView
-	                    android:id="@+id/recommend_itemage_text2"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginTop="3dip"
-	                    android:text="만 36개월 이상"
-	                    android:textColor="#000000"
-	                    android:textSize="10sp"/>
-	                
-	            </LinearLayout>
-	            
-	            <LinearLayout
-	                android:layout_width="match_parent"
-	                android:layout_height="0dip"
-	                android:layout_weight="2"
-	                android:orientation="vertical">
-	                
-	                <LinearLayout
-	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
-	                    android:orientation="horizontal">
-	                    
-	                    <TextView
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_gravity="center"
-	                        android:text="기간"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                      
-		                <TextView
-		                    android:id="@+id/recommend_period_text2"
-		                    android:layout_width="wrap_content"
-		                    android:layout_height="wrap_content"
-		                    android:layout_marginLeft="5dip"
-	                        android:layout_gravity="center"
-		                    android:text="14. 04. 22 ~ 14. 04. 27"
-		                    android:textColor="#000000"
-		                    android:textSize="12sp"/>
-	                    
-	                </LinearLayout>
-	                
-	                <LinearLayout
-	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
-	                    android:orientation="horizontal">
-	                    
-	                    <TextView
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_gravity="center"
-	                        android:text="장소"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                        
-	                    <TextView
-	                        android:id="@+id/recommend_place_text2"
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_marginLeft="5dip"
-	                        android:layout_gravity="center"
-	                        android:text="오페라 하우스"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                    
-	                </LinearLayout>
-	                
-	                <LinearLayout
-	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
-	                    android:orientation="horizontal">
-	                    
-	                    <TextView
-	                        android:layout_width="wrap_content"
-	                        android:layout_height="wrap_content"
-	                        android:layout_gravity="center"
-	                        android:text="거리"
-	                        android:textColor="#000000"
-	                        android:textSize="12sp"/>
-	                      
-		                <TextView
-		                    android:id="@+id/recommend_distance_text2"
-		                    android:layout_width="wrap_content"
-		                    android:layout_height="wrap_content"
-		                    android:layout_marginLeft="5dip"
-	                        android:layout_gravity="center"
-		                    android:text="5km"
-		                    android:textColor="#000000"
-		                    android:textSize="12sp"/>
-	                    
-	                </LinearLayout>
-	                
-	            </LinearLayout>
-	            
-	        </LinearLayout>
-	        
-	         <LinearLayout
-	            android:layout_width="0dip"
-	            android:layout_height="match_parent"
-	            android:layout_weight="3"
-	            android:gravity="center"
-	            android:orientation="vertical">
-	            
-	             <RelativeLayout
-	                 android:layout_width="match_parent"
-	                 android:layout_height="0dip"
-	                 android:layout_weight="75">
-	                 
-	                 <ImageView
-			             android:id="@+id/recommend_weatherimage_image2"
-			             android:layout_width="50dip"
-			             android:layout_height="50dip"
-						 android:layout_centerInParent="true"
-						 android:paddingTop="3dip"
-			             android:src="@drawable/weather_image"/>
-	                 
-	             </RelativeLayout>
-	             
-	             <RelativeLayout
-	                 android:layout_width="match_parent"
-	                 android:layout_height="0dip"
-	                 android:layout_weight="50">
-	             
-	                 <TextView
-		             android:id="@+id/recommend_weathertemperature_text2"
-		             android:layout_width="wrap_content"
-		             android:layout_height="wrap_content"
-					 android:layout_centerInParent="true"
-		             android:text="18.3°"
-		             android:textColor="#000000"
-		             android:textSize="20sp"/>
-	                 
-	             </RelativeLayout>
-		             
-	         </LinearLayout>
-	        
-	    </LinearLayout>
+	    <ListView
+		android:id="@+id/main_recommend_card_item_list"
+		android:layout_width="match_parent"
+		android:layout_height="0dip"
+		android:layout_weight="4"
+		android:headerDividersEnabled="true"
+		android:footerDividersEnabled="true"
+		android:listSelector="@android:color/transparent"
+		android:cacheColorHint="@android:color/transparent"
+		android:divider="#DEE7E7"
+		android:dividerHeight="1dip" />
 	    
 	    <!-- more receommend list -->
 	    
